Bug 79668 - FILESAVE: Corrupt: Attached file got corrupted after RT on Windows & Ubuntu Build (Without dbgutil build)
Summary: FILESAVE: Corrupt: Attached file got corrupted after RT on Windows & Ubuntu B...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Tushar Bende
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-05 07:03 UTC by Tushar Bende
Modified: 2014-06-11 09:50 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
File for which this issue can be reproduced (79.52 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-05 07:04 UTC, Tushar Bende
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Bende 2014-06-05 07:03:03 UTC
Problem description: Attached file got corrupted after RT on windows Build

Steps to reproduce:
1. Try to Open file in LibreOffice (On windows Build)
2. save it back to docx format
3. open RoundTripped file in MS office.

Expected Result:
The file should open properly.

Actual Result:
File is corrupt.

              
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 Tushar Bende 2014-06-05 07:04:01 UTC
Created attachment 100442 [details]
File for which this issue can be reproduced
Comment 2 Jorendc 2014-06-05 07:54:00 UTC
Repro, using Windows 8.1 with LibreOffice Version: 4.4.0.0.alpha0+
Build ID: b447687292334687a371b66d7ad56ba9662b898e
TinderBox: Win-x86@39, Branch:master, Time: 2014-06-03_06:24:04

Kind regards,
Joren
Comment 3 Tushar Bende 2014-06-10 09:13:12 UTC
Attached File crashes LO writer while Saving back to docx format if build is debugutil build.

<Windows build is build without dbgutil option> hence it is not crashing and output is corrupt document.
Comment 4 Commit Notification 2014-06-11 09:31:22 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e1d80c0d70562e1f24f150a81a34ee4e3edc90f3

fdo#79668 :File getting corrupt after RT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.